--- a/views/location/view.ejs
+++ b/views/location/view.ejs
@@ -63,7 +63,7 @@
                                                                     <tr>
                                                                         <td>Active</td>
                                                                         <td>
-                                                                            <%- location.isActive%>
+                                                                            <%- location.isActive ? "Yes" : "No"%>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
