--- a/views/dashboards/admin.ejs
+++ b/views/dashboards/admin.ejs
@@ -13,10 +13,15 @@
     <link rel="stylesheet" href="./vendors/typicons/typicons.css">
     <link rel="stylesheet" href="./vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="./vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="./vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="./js/select.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap5.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="./css/vertical-layout-light/style.css">
@@ -80,16 +85,17 @@
                                                                                     <a href="/create-user" class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-account-plus"></i>Add new member</a>
                                                                                 </div>
                                                                             </div>
+                                                                            <br>
                                                                             <div class="table-responsive  mt-1">
-                                                                                <table class="table table-hover">
+                                                                                <table id="membersTable" class="table table-hover">
                                                                                     <thead>
                                                                                         <tr>
                                                                                             <th>Name</th>
                                                                                             <th>Phone</th>
                                                                                             <th>Email</th>
                                                                                             <th>Plan</th>
-                                                                                            <th>Expiration Date <br> (MM/DD/YYYY)
-                                                                                            </th>
+                                                                                            <!-- <th>Expiration Date <br> <small>(MM/DD/YYYY)</small>
+                                                                                            </th> -->
                                                                                             <th>Action</th>
                                                                                         </tr>
                                                                                     </thead>
@@ -113,22 +119,23 @@
                                                                                                 <td>
                                                                                                     <%- user.membershipInfo.plan%>
                                                                                                 </td>
-                                                                                                <td>
-                                                                                                    <%= moment(user.membershipInfo.endDate).isValid() ? moment(user.membershipInfo.endDate).utc().format(shortDateFormat) : 'N/A' %>
-                                                                                                </td>
+                                                                                                <!-- <td>
+                                                                                                    <%# moment(user.membershipInfo.endDate).isValid() ? moment(user.membershipInfo.endDate).utc().format(shortDateFormat) : 'N/A' %>
+                                                                                                </td> -->
                                                                                                 <td>
                                                                                                     <a href="/edit-user/<%- user.id%>?url=/account" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                                        <i class="mdi mdi-square-edit-outline icon-md"></i>
+                                                                                                        <i class="far fa-edit icon-md"></i>
                                                                                                     </a>
                                                                                                     <!-- <a id="manage-billing-button" class="btn btn-icon btn-icon-no-border no-margin">
                                                                                                         
                                                                                                         <i class="fab fa-stripe"></i>
                                                                                                     </a> -->
-                                                                                                    <button class="btn btn-outline-primary" style="margin: 0;" id="manage-billing-button" type="submit" value="<%- user.billingID%>" email="<%- user.email%>">
-                                                                                                        Manage Billing
-                                                                                                    </button>
-                                                                                                    <a id="deleteBtn" href="/delete-user/<%- user.id%>" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                                        <i class="mdi mdi-delete icon-md text-danger"></i>
+                                                                                                    <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button" style="margin: 0;" type="submit" value="<%- user.billingID%>" email="<%- user.email%>">
+                                                                                                        <i class="fab fa-stripe-s icon-md"></i>
+                                                                                                    </a>
+
+                                                                                                    <a id="deleteBtn" onclick="return confirmDelete('/delete-user', '<%- user.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
+                                                                                                        <i class="fas fa-trash-alt icon-md text-danger"></i>
                                                                                                     </a>
                                                                                                 </td>
                                                                                             </tr>
@@ -233,19 +240,29 @@
     <script src="./js/todolist.js"></script>
     <!-- endinject -->
     <!-- Custom js for this page-->
-    <script>
-        var customer = <%- JSON.stringify(user) %>;
+    <!-- <script>
+        var customer = <%# JSON.stringify(user) %>;
         console.debug(customer);
-    </script>
+    </script> -->
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="./js/account.js"></script>
     <script src="./js/jquery.cookie.js" type="text/javascript"></script>
     <script src="./js/dashboard.js"></script>
     <script src="./js/Chart.roundedBarCharts.js"></script>
     <!-- End custom js for this page-->
-
+    <script src="../js/helper-functions.js"></script>
+    <!-- Datatables -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+
+        <script>
+            $(document).ready(function() {
+                $('#membersTable').DataTable();
+            });
+        </script>
 </body>
 
 </html>
