--- a/views/location/index.ejs
+++ b/views/location/index.ejs
@@ -14,11 +14,15 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap5.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../css/vertical-layout-light/style.css">
@@ -52,8 +56,10 @@
                                                             <a href="/create-location" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add location</a>
                                                         </div>
                                                     </div>
+                                                    <br>
+
                                                     <div class="table-responsive  mt-1">
-                                                        <table class="table table-hover">
+                                                        <table id="locations" class="table table-hover stripe">
                                                             <thead>
                                                                 <tr>
                                                                     <th>Name</th>
@@ -70,14 +76,14 @@
                                                                             </a>
                                                                         </td>
                                                                         <td>
-                                                                            <%- location.isActive %>
+                                                                            <%- location.isActive ? "Yes" : "No" %>
 
                                                                         </td>
                                                                         <td>
-                                                                            <a href="/edit-location/<%- location.id%>?url=/location" type="button" class="btn btn-icon btn-icon-no-border no-margin">
+                                                                            <a href="/edit-location/<%- location.id%>?url=/locations" type="button" class="btn btn-icon btn-icon-no-border no-margin">
                                                                                 <i class="mdi mdi-square-edit-outline icon-md"></i>
                                                                             </a>
-                                                                            <a id="deleteBtn" href="/delete-location/<%- location.id%>" class="btn btn-icon btn-icon-no-border no-margin">
+                                                                            <a id="deleteBtn" onclick="return confirmDelete('/delete-location', '<%- location.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
                                                                                 <i class="mdi mdi-delete icon-md text-danger"></i>
                                                                             </a>
                                                                         </td>
@@ -125,9 +131,18 @@
     <script src="../js/Chart.roundedBarCharts.js"></script>
 
     <!-- End custom js for this page-->
-
+    <script src="../js/helper-functions.js"></script>
+    <!-- Datatables -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+        <script>
+            $(document).ready(function() {
+                $('#locations').DataTable();
+            });
+        </script>
 </body>
 
 </html>
