--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -14,28 +14,28 @@
     <link rel="stylesheet" href="../vendors/simple-line-icons/css/simple-line-icons.css">
     <link rel="stylesheet" href="../vendors/css/vendor.bundle.base.css">
     <link rel="stylesheet" href="../../css/register.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <link rel="stylesheet" href="../vendors/datatables.net-bs4/dataTables.bootstrap4.css">
     <link rel="stylesheet" href="../js/select.dataTables.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.4/css/dataTables.bootstrap5.min.css">
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../css/vertical-layout-light/style.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="../images/favicon.png" />
+
 </head>
 
 <body class="sidebar-icon-only">
     <div class="container-scroller">
-        <!-- partial:partials/_navbar.html -->
         <%- include('../partials/navbar.ejs' , {user, user}); %>
-
-            <!-- partial -->
             <div class="container-fluid page-body-wrapper">
-                <!-- partial:partials/_sidebar.html -->
                 <%- include('../partials/sidebar.ejs' , {user, user}); %>
-                    <!-- partial -->
                     <div class="main-panel">
                         <div class="content-wrapper">
                             <div class="row">
@@ -52,8 +52,9 @@
                                                             <a href="/create-user" class="btn btn-primary btn-icon-text" type="button"><i class="mdi mdi-map-marker-plus btn-icon-prepend"></i>Add User</a>
                                                         </div>
                                                     </div>
+                                                    <br>
                                                     <div class="table-responsive  mt-1">
-                                                        <table class="table table-hover">
+                                                        <table id="users" class="table table-hover stripe">
                                                             <thead>
                                                                 <tr>
                                                                     <th>Name</th>
@@ -92,10 +93,15 @@
 
                                                                             <td>
                                                                                 <a href="/edit-user/<%- user.id%>?url=/users" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                    <i class="mdi mdi-square-edit-outline icon-md"></i>
+                                                                                    <i class="far fa-edit icon-md"></i>
                                                                                 </a>
-                                                                                <a id="deleteBtn" href="/delete-user/<%- user.id%>" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                    <i class="mdi mdi-delete icon-md text-danger"></i>
+
+                                                                                <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button" style="margin: 0;" type="submit" value="<%- user.billingID%>" email="<%- user.email%>">
+                                                                                    <i class="fab fa-stripe-s icon-md"></i>
+                                                                                </a>
+
+                                                                                <a id="deleteBtn" onclick="return confirmDelete('/delete-user', '<%- user.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
+                                                                                    <i class="fas fa-trash-alt icon-md text-danger"></i>
                                                                                 </a>
                                                                             </td>
                                                                         </tr>
@@ -138,14 +144,25 @@
     <!-- Custom js for this page-->
 
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript" src="../js/account.js"></script>
     <script src="../js/jquery.cookie.js" type="text/javascript"></script>
     <script src="../js/dashboard.js"></script>
     <script src="../js/Chart.roundedBarCharts.js"></script>
 
     <!-- End custom js for this page-->
-
+    <script src="../js/helper-functions.js"></script>
+    <!-- Datatables -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
     <!-- Alerts Code -->
     <%- include('../partials/alerts.ejs', {message, alertType}); %>
+
+        <script>
+            $(document).ready(function() {
+                $('#users').DataTable();
+            });
+        </script>
 </body>
 
 </html>
