--- a/views/dashboards/admin.ejs
+++ b/views/dashboards/admin.ejs
@@ -124,18 +124,18 @@
                                                                                                 </td> -->
                                                                                                 <td>
                                                                                                     <a href="/edit-user/<%- user.id%>?url=/account" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                                        <i class="far fa-edit icon-md"></i>
+                                                                                                        <i class="far fa-edit icon-sm"></i>
                                                                                                     </a>
                                                                                                     <!-- <a id="manage-billing-button" class="btn btn-icon btn-icon-no-border no-margin">
                                                                                                         
                                                                                                         <i class="fab fa-stripe"></i>
                                                                                                     </a> -->
                                                                                                     <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button" style="margin: 0;" type="submit" value="<%- user.billingID%>" email="<%- user.email%>">
-                                                                                                        <i class="fab fa-stripe-s icon-md"></i>
+                                                                                                        <i class="fab fa-stripe-s icon-sm"></i>
                                                                                                     </a>
 
                                                                                                     <a id="deleteBtn" onclick="return confirmDelete('/delete-user', '<%- user.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                                        <i class="fas fa-trash-alt icon-md text-danger"></i>
+                                                                                                        <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                                                     </a>
                                                                                                 </td>
                                                                                             </tr>
