--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -31,7 +31,9 @@
 
 </head>
 
-<body class="sidebar-icon-only">
+<!-- <body class="sidebar-icon-only"> -->
+
+<body>
     <div class="container-scroller">
         <%- include('../partials/navbar.ejs' , {user, user}); %>
             <div class="container-fluid page-body-wrapper">
@@ -93,15 +95,15 @@
 
                                                                             <td>
                                                                                 <a href="/edit-user/<%- user.id%>?url=/users" type="button" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                    <i class="far fa-edit icon-md"></i>
+                                                                                    <i class="far fa-edit icon-sm"></i>
                                                                                 </a>
 
                                                                                 <a class="btn btn-icon btn-icon-no-border no-margin manage-billing-button" style="margin: 0;" type="submit" value="<%- user.billingID%>" email="<%- user.email%>">
-                                                                                    <i class="fab fa-stripe-s icon-md"></i>
+                                                                                    <i class="fab fa-stripe-s icon-sm"></i>
                                                                                 </a>
 
                                                                                 <a id="deleteBtn" onclick="return confirmDelete('/delete-user', '<%- user.id%>')" class="btn btn-icon btn-icon-no-border no-margin">
-                                                                                    <i class="fas fa-trash-alt icon-md text-danger"></i>
+                                                                                    <i class="fas fa-trash-alt icon-sm text-danger"></i>
                                                                                 </a>
                                                                             </td>
                                                                         </tr>
