--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,51 +1,5 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <title>Mr. Quicks Subscriptions</title>
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
-
-  <link href="./css/common.css" rel="stylesheet" />
-  <link href="./css/login.css" rel="stylesheet" />
-
-</head>
-
-<body class="text-center">
-  <form class="form-login" action="/login" method="post">
-    <img class="mb-4" src="./images/saasbase.png" alt="" width="72" height="72" />
-    <h1 class="h3 mb-3 font-weight-normal">Log in</h1>
-    <p class="mb-3">
-      Mr. Quicks Subscriptions Portal
-    </p>
-    <label for="email" class="sr-only">Email address</label>
-    <input type="email" id="email" name="email" class="form-control mb-3" placeholder="Email address" required
-      autofocus />
-    <label for="password" class="sr-only">Password</label>
-    <input type="password" id="password" name="password" class="form-control mb-3" placeholder="Password"
-      autofocus />
-    <button class="btn btn-lg btn-primary btn-block" type="submit">
-      Sign in
-    </button>
-    <button class="btn btn-block btn-lg" type="button" onclick="location.href='register'">Create Account</button>
-    <p class="mt-5 mb-3 text-muted">&copy; Auto Care Inc. 2021</p>
-  </form>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
-</body>
-
-</html> -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
     <!-- Required meta tags -->
@@ -64,6 +18,7 @@
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <link rel="stylesheet" href="../../css/vertical-layout-light/style.css">
+    <link rel="stylesheet" href="../../vendors/flag-icon-css/css/flag-icon.min.css">
     <!-- endinject -->
     <link rel="shortcut icon" href="../../images/favicon.png" />
 </head>
@@ -78,8 +33,13 @@
                             <div class="brand-logo">
                                 <img src="/images/mrquicks/mrQuicksLogo.png" alt="logo">
                             </div>
-                            <h4>Login</h4>
-                            <h6 class="fw-light">Mr. Quick's Subscriptions Portal.</h6>
+                            <h4>
+                                <%= lingua.login%>
+                            </h4>
+
+                            <h6 class="fw-light">
+                                <%= lingua.title %>
+                            </h6>
                             <% if (messages.error) { %>
                                 <p class="error">
                                     <%= messages.error %>
@@ -105,24 +65,35 @@
 
                                                 <div class="mt-3">
 
-                                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit">
-                    Sign in
-                  </button>
+                                                    <button class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" type="submit"><%= lingua.login%></button>
                                                 </div>
                                                 <div class="my-2 d-flex justify-content-between align-items-center">
-                                                    <!-- <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input type="checkbox" class="form-check-input">
-                      Keep me signed in
-                    </label>
-                  </div> -->
                                                     <!-- <a href="#" class="auth-link text-black">Forgot password?</a> -->
                                                 </div>
 
                                                 <div class="text-center mt-4 fw-light">
-                                                    Don't have an account? <a href="/create-account" class="text-primary">Create</a>
+                                                    <%= lingua.dontHaveAccount %>
+                                                        <a href="/create-account" class="text-primary">
+                                                            <%= lingua.create %>
+
+                                                        </a>
                                                 </div>
                                             </form>
+                                            <br>
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-sm btn-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuSplitButton1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                  <%= lingua.selectLanguage%> 
+                                              </button>
+                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
+                                                    <a href="?lang=es" class="dropdown-item">
+
+                                                        <span class="flag-icon flag-icon-pr "></span> ES
+                                                    </a>
+                                                    <a href="?lang=en" class="dropdown-item">
+                                                        <span class="flag-icon flag-icon-um "></span> EN
+                                                    </a>
+                                                </div>
+                                            </div>
                         </div>
                     </div>
                 </div>
@@ -133,23 +104,23 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../vendors/js/vendor.bundle.base.js"></script>
+    <script src="../../vendors/js/vendor.bundle.base.js "></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
-    <script src="../../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+    <script src="../../vendors/bootstrap-datepicker/bootstrap-datepicker.min.js "></script>
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../js/off-canvas.js"></script>
-    <script src="../../js/hoverable-collapse.js"></script>
-    <script src="../../js/template.js"></script>
-    <script src="../../js/settings.js"></script>
-    <script src="../../js/todolist.js"></script>
+    <script src="../../js/off-canvas.js "></script>
+    <script src="../../js/hoverable-collapse.js "></script>
+    <script src="../../js/template.js "></script>
+    <script src="../../js/settings.js "></script>
+    <script src="../../js/todolist.js "></script>
 
     <!-- endinject -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.3/dist/sweetalert2.all.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.3/dist/sweetalert2.all.min.js "></script>
 
     <!-- Alerts Code -->
-    <script type="text/javascript" src="./js/sweet-alerts.js"></script>
+    <script type="text/javascript " src="./js/sweet-alerts.js "></script>
     <script>
         $(document).ready(function() {
             var msj = '<%- message %>';
