--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,7 +19,8 @@
     <div class="navbar-menu-wrapper d-flex align-items-top">
         <ul class="navbar-nav">
             <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-                <h1 class="welcome-text">Good Morning, <span class="text-black fw-bold"><%- user.personalInfo.firstName%></span></h1>
+                <h1 class="welcome-text">
+                    <%= lingua.welcome%>, <span class="text-black fw-bold"><%- user.personalInfo.firstName%></span></h1>
                 <!-- <h3 class="welcome-sub-text">Your performance summary this week </h3> -->
                 <% if (messages.error) { %>
                     <p class="error">
@@ -179,22 +180,21 @@
                         </a>
                     </div>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link count-indicator" id="languageDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="icon-globe"></i>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="languageDropdown">
-                        <a href="?lang=es" class="dropdown-item dropdown-item py-3">
+                <%}%>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link count-indicator" id="languageDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="icon-globe"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="languageDropdown">
+                            <a href="?lang=es" class="dropdown-item dropdown-item py-3">
 
                             ES <span class="flag-icon flag-icon-pr" style="margin-left: 5px;"></span>
                         </a>
-                        <a href="?lang=en" class="dropdown-item dropdown-item py-3">
+                            <a href="?lang=en" class="dropdown-item dropdown-item py-3">
                             EN <span class="flag-icon flag-icon-um" style="margin-left: 5px;"></span>
                         </a>
-                    </div>
-                </li>
-                <%}%>
-
+                        </div>
+                    </li>
                     <li class="nav-item dropdown d-none d-lg-block user-dropdown">
                         <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                             <img class="img-xs rounded-circle" src="../../images/faces/profile/user.png" alt="Profile image"> </a>
