Implement History Schema, Model, Service, controller and views.

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -22,7 +22,12 @@
             <%}%>
 
                 <%if([roles.ADMIN].includes(user.role)) {%>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="/history">
+                            <i class="mdi mdi-history menu-icon"></i>
+                            <span class="menu-title">History</span>
+                        </a>
+                    </li>
                     <li class="nav-item nav-category">UI Elements</li>
                     <li class="nav-item">
                         <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
