--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -186,11 +186,11 @@
                             <i class="icon-globe"></i>
                         </a>
                         <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list pb-0" aria-labelledby="languageDropdown">
-                            <a href="?lang=es" class="dropdown-item dropdown-item py-3">
-
+                            <a id="es-lang" href="?lang=es" class="dropdown-item py-3">
                             ES <span class="flag-icon flag-icon-pr" style="margin-left: 5px;"></span>
-                        </a>
-                            <a href="?lang=en" class="dropdown-item dropdown-item py-3">
+                            </a>
+
+                            <a id="en-lang" href="?lang=en" class="dropdown-item py-3">
                             EN <span class="flag-icon flag-icon-um" style="margin-left: 5px;"></span>
                         </a>
                         </div>
@@ -229,3 +229,11 @@
       </button>
     </div>
 </nav>
+<script src="../js/helper-functions.js"></script>
+
+<script>
+    window.onload = function() {
+        //YOUR JQUERY CODE
+        manageLangDropdown();
+    };
+</script>
