--- a/views/dashboards/admin.ejs
+++ b/views/dashboards/admin.ejs
@@ -262,7 +262,7 @@
     <script src="./js/dashboard.js"></script>
     <script src="./js/Chart.roundedBarCharts.js"></script>
     <!-- End custom js for this page-->
-    <script src="../js/helper-functions.js"></script>
+    <!-- <script src="../js/helper-functions.js"></script> -->
     <!-- Datatables -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
