Implement Membership validation: routes, methods and views.

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -7,6 +7,12 @@
             </a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" href="/validateMembership">
+                <i class="mdi mdi-clipboard-text menu-icon"></i>
+                <span class="menu-title">Validate Membership</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" href="/activity">
                 <i class="mdi mdi-clipboard-text menu-icon"></i>
                 <span class="menu-title">My Activity</span>
